[package]
name = "ktxstats"
description = "Handle QuakeWorld KTX stats JSON files."
keywords = ["json", "ktx", "quake", "quakeworld"]
repository = "https://github.com/vikpe/ktxstats"
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
